--- a/index.html
+++ b/index.html
@@ -6,37 +6,45 @@
   </head>
   <body>
     <header>
+        <a>
+          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
+        </a>
+        <form>
+            <input type="text" name="search" placeholder="Поиск по сайту">
+            <input type="submit" value="Поиск">
+        </form>
+        <ul>
+          <li>
+            <a href="#">Войти</a>
+          </li>
+          <li>
+            <a href="#">Сравнить</a>
+          </li>
+          <li>
+            <a href="#">Корзина</a>
+          </li>
+        </ul>
       <nav>
-          <a><img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Device'"></a>
-          <form action="">
-              <span class="icon-search"></span>
-              <input type="text" name="search" placeholder="Поиск по сайту">
-              <input type="submit" value="Поиск">
-          </form>
           <ul>
-            <li><a href=""><span class="icon-user"></span>Войти</a></li>
-            <li><a href=""><span class="icon-compare"></span>Сравнить</a></li>
-            <li><a href=""><span class="icon-cart"></span>Корзина</a></li>
-          </ul>
-
-          <p><a href="catalog.html">Каталог</a><span></span></p> 
-
-          <ul>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Гарантия</a></li>
-            <li><a href="">Контакты</a></li>
+            <li>
+              <a href="catalog.html">Каталог</a>
+            </li>
+            <li>
+              <a href="#">Доставка</a>
+            </li>
+            <li>
+              <a href="#">Гарантия</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
           </ul>
       </nav>
     </header>
     <main>
       <h1 class="visually-hidden">Device - интернет-магазин гаджетов с оригинальным дизайном</h1>
-      <!--content-->
-      <!--/content-->
       <section>
         <div>
-          <svg width="80" height="7">
-            <rect width="80" height="7" fill="#000000"></rect>
-          </svg>
           <h2>О нас</h2>
           <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
@@ -48,9 +56,6 @@
             <a href="">Подробнее о нас</a>
         </div>
         <div>
-            <svg width="80" height="7">
-                <rect width="80" height="7" fill="#000000"></rect>
-              </svg>
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
             <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Местонахождение офиса на карте">
@@ -59,29 +64,49 @@
       </section>
     </main>
     <footer>
-        <p><a><img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'"></a>
+        <p>
+          <a>
+            <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'">
+          </a>
         </p>
         <ul>
-            <li><a href=""><span class="icon-user"></span>Войти</a></li>
-            <li><a href=""><span class="icon-compare"></span>Сравнить</a></li>
-            <li><a href=""><span class="icon-cart"></span>Корзина</a></li>
+            <li>
+              <a href="#">Войти</a>
+            </li>
+            <li>
+              <a href="#">Сравнить</a>
+            </li>
+            <li>
+              <a href="#">Корзина</a>
+            </li>
           </ul>
         <p>г. Москва, ул. Строителей, 15</p>
         <ul>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Гарантия</a></li>
-            <li><a href="">Контакты</a></li>
+            <li>
+              <a href="#">Доставка</a>
+            </li>
+            <li>
+              <a href="#">Гарантия</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
           </ul>
           <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
-          <svg width="80" height="7">
-              <rect width="80" height="7" fill="#ffc500"></rect>
-            </svg>
           <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Twitter</a></li>
+              <li>
+                <a href="#">Facebook</a>
+              </li>
+              <li>
+                <a href="#">Instagram</a>
+              </li>
+              <li>
+                <a href="#">Twitter</a>
+              </li>
           </ul>
-          <p><a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></p>
+          <p>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+          </p>
     </footer>
   </body>
 </html>
