Fixed empty links

--- a/catalog.html
+++ b/catalog.html
@@ -20,10 +20,10 @@
         <a href="profile.html">Валентин Петухов</a>
       </li>
       <li>
-        <a href="#">Сравнить</a>
+        <a href="">Сравнить</a>
       </li>
       <li>
-        <a href="#">Корзина</a>
+        <a href="">Корзина</a>
       </li>
     </ul>
     <nav>
@@ -32,13 +32,13 @@
           <a href="catalog.html">Каталог</a>
         </li>
         <li>
-          <a href="#">Доставка</a>
+          <a href="">Доставка</a>
         </li>
         <li>
-          <a href="#">Гарантия</a>
+          <a href="">Гарантия</a>
         </li>
         <li>
-          <a href="#">Контакты</a>
+          <a href="">Контакты</a>
         </li>
       </ul>
     </nav>
@@ -50,59 +50,59 @@
         <a href="index.html">Главная</a>
       </li>
       <li>
-        <a href="#">Каталог</a>
+        <a href="">Каталог</a>
       </li>
       <li>
-        <a href="#">Моноподы для селфи</a>
+        <a href="">Моноподы для селфи</a>
       </li>
     </ul>
     <section>
       <ul>
         <li>
           <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
-          <a href="#">
+          <a href="">
             <h3>Любительская селфи-палка</h3>
           </a>
           <p>500 руб.</p>
           <div>
-              <a href="#">В корзину</a>
-              <a href="#">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
           </div>
         </li>
 
         <li>
           <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка">
-          <a href="#">
+          <a href="">
             <h3>Профессиональная селфи-палка</h3>
           </a>
           <p>1 500 руб.</p>
           <div>
-              <a href="#">В корзину</a>
-              <a href="#">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
           </div>
         </li>
 
         <li>
           <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
-          <a href="#">
+          <a href="">
             <h3>Непотопляемая селфи-палка</h3>
           </a>
           <p>2 500 руб.</p>
           <div>
-              <a href="#">В корзину</a>
-              <a href="#">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
           </div>
         </li>
 
         <li>
           <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-          <a href="#">
+          <a href="">
             <h3>Селфи-палка «Следуй за мной»</h3>
           </a>
           <p>4 900 руб.</p>
           <div>
-              <a href="#">В корзину</a>
-              <a href="#">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
           </div>
         </li>
       </ul>
@@ -118,34 +118,34 @@
           <a href="profile.html">Валентин Петухов</a>
         </li>
         <li>
-          <a href="#">Сравнить</a>
+          <a href="">Сравнить</a>
         </li>
         <li>
-          <a href="#">Корзина</a>
+          <a href="">Корзина</a>
         </li>
       </ul>
       <p>г. Москва, ул. Строителей, 15</p>
       <ul>
         <li>
-          <a href="#">Доставка</a>
+          <a href="">Доставка</a>
         </li>
         <li>
-          <a href="#">Гарантия</a>
+          <a href="">Гарантия</a>
         </li>
         <li>
-          <a href="#">Контакты</a>
+          <a href="">Контакты</a>
         </li>
       </ul>
       <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
       <ul>
         <li>
-          <a href="#">Facebook</a>
+          <a href="">Facebook</a>
         </li>
         <li>
-          <a href="#">Instagram</a>
+          <a href="">Instagram</a>
         </li>
         <li>
-          <a href="#">Twitter</a>
+          <a href="">Twitter</a>
         </li>
       </ul>
       <p>
