--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         </form>
         <ul>
           <li>
-            <a href="#">Войти</a>
+            <a href="">Войти</a>
           </li>
           <li>
-            <a href="#">Сравнить</a>
+            <a href="">Сравнить</a>
           </li>
           <li>
-            <a href="#">Корзина</a>
+            <a href="">Корзина</a>
           </li>
         </ul>
       <nav>
@@ -30,13 +30,13 @@
               <a href="catalog.html">Каталог</a>
             </li>
             <li>
-              <a href="#">Доставка</a>
+              <a href="">Доставка</a>
             </li>
             <li>
-              <a href="#">Гарантия</a>
+              <a href="">Гарантия</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+              <a href="">Контакты</a>
             </li>
           </ul>
       </nav>
@@ -71,37 +71,37 @@
         </p>
         <ul>
             <li>
-              <a href="#">Войти</a>
+              <a href="">Войти</a>
             </li>
             <li>
-              <a href="#">Сравнить</a>
+              <a href="">Сравнить</a>
             </li>
             <li>
-              <a href="#">Корзина</a>
+              <a href="">Корзина</a>
             </li>
           </ul>
         <p>г. Москва, ул. Строителей, 15</p>
         <ul>
             <li>
-              <a href="#">Доставка</a>
+              <a href="">Доставка</a>
             </li>
             <li>
-              <a href="#">Гарантия</a>
+              <a href="">Гарантия</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+              <a href="">Контакты</a>
             </li>
           </ul>
           <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
           <ul>
               <li>
-                <a href="#">Facebook</a>
+                <a href="">Facebook</a>
               </li>
               <li>
-                <a href="#">Instagram</a>
+                <a href="">Instagram</a>
               </li>
               <li>
-                <a href="#">Twitter</a>
+                <a href="">Twitter</a>
               </li>
           </ul>
           <p>
