--- a/index.html
+++ b/index.html
@@ -43,6 +43,79 @@
     </header>
     <main>
       <h1 class="visually-hidden">Device - интернет-магазин гаджетов с оригинальным дизайном</h1>
+      <!--Main slider-->
+      <section>
+        <!--#1 Slide-->
+        <figure>
+          <img src="https://via.placeholder.com/163x35" alt="Профессиональная селфи-палка">
+          <figcaption>
+            <h2>Делай селфи, как Бен Стиллер!</h2>
+            <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
+               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+            </p>
+            <a href="">Подробнее</a>
+            <table>
+              <tr>
+                <td>Длинна палки</td>
+                <td>Вес палки</td>
+                <td>Материал</td>
+              </tr>
+              <tr>
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+            </table>
+          </figcaption>
+        </figure>
+        <!--/#1 Slide-->
+
+        <!--#2 Slide-->
+        <figure>
+          <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслет">
+          <figcaption>
+            <h2>Худеем правильно!</h2>
+            <p>
+              Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+            </p>
+            <a href="">Подробнее</a>
+            <table>
+              <tr>
+                <td>Без подзарядки</td>
+              </tr>
+              <tr>
+                <td>48 часов</td>
+              </tr>
+            </table>
+          </figcaption>
+        </figure>
+          <!--/#2 Slide-->
+
+        <!--#3 Slide-->
+        <figure>
+          <img src="https://via.placeholder.com/163x35" alt="Квадрокоптер">
+          <figcaption>
+            <h2>Порхает как бабочка, жалит как пчела!</h2>
+            <p>
+              Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+            </p>
+            <a href="">Подробнее</a>
+            <table>
+              <tr>
+                <td>Высота полета</td>
+                <td>Радиус поражения</td>
+              </tr>
+              <tr>
+                <td>800 м</td>
+                <td>50 м</td>
+              </tr>
+            </table>
+          </figcaption>
+        </figure>
+          <!--/#3 Slide-->
+      </section>
+      <!--/Main slider-->
+      
       <section>
         <div>
           <h2>О нас</h2>
