Added catalog sections and promo slider

--- a/index.html
+++ b/index.html
@@ -1,185 +1,287 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
-    <header>
-        <a>
-          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
-        </a>
-        <form>
-            <input type="text" name="search" placeholder="Поиск по сайту">
-            <input type="submit" value="Поиск">
-        </form>
-        <ul>
-          <li>
-            <a href="">Войти</a>
-          </li>
-          <li>
-            <a href="">Сравнить</a>
-          </li>
-          <li>
-            <a href="">Корзина</a>
-          </li>
-        </ul>
-      <nav>
-          <ul>
-            <li>
-              <a href="catalog.html">Каталог</a>
-            </li>
-            <li>
-              <a href="">Доставка</a>
-            </li>
-            <li>
-              <a href="">Гарантия</a>
-            </li>
-            <li>
-              <a href="">Контакты</a>
-            </li>
-          </ul>
-      </nav>
-    </header>
-    <main>
-      <h1 class="visually-hidden">Device - интернет-магазин гаджетов с оригинальным дизайном</h1>
-      <!--Main slider-->
-      <section>
-        <!--#1 Slide-->
-        <figure>
-          <img src="https://via.placeholder.com/163x35" alt="Профессиональная селфи-палка">
-          <figcaption>
-            <h2>Делай селфи, как Бен Стиллер!</h2>
-            <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
-               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-            </p>
-            <a href="">Подробнее</a>
-            <table>
-              <tr>
-                <td>Длинна палки</td>
-                <td>Вес палки</td>
-                <td>Материал</td>
-              </tr>
-              <tr>
-                <td>8,5 м</td>
-                <td>5 кг</td>
-                <td>Карбон</td>
-              </tr>
-            </table>
-          </figcaption>
-        </figure>
-        <!--/#1 Slide-->
 
-        <!--#2 Slide-->
-        <figure>
-          <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслет">
-          <figcaption>
-            <h2>Худеем правильно!</h2>
-            <p>
-              Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
-            </p>
-            <a href="">Подробнее</a>
-            <table>
-              <tr>
-                <td>Без подзарядки</td>
-              </tr>
-              <tr>
-                <td>48 часов</td>
-              </tr>
-            </table>
-          </figcaption>
-        </figure>
-          <!--/#2 Slide-->
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Девайс</title>
+</head>
 
-        <!--#3 Slide-->
-        <figure>
-          <img src="https://via.placeholder.com/163x35" alt="Квадрокоптер">
-          <figcaption>
-            <h2>Порхает как бабочка, жалит как пчела!</h2>
-            <p>
-              Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
-            </p>
-            <a href="">Подробнее</a>
-            <table>
-              <tr>
-                <td>Высота полета</td>
-                <td>Радиус поражения</td>
-              </tr>
-              <tr>
-                <td>800 м</td>
-                <td>50 м</td>
-              </tr>
-            </table>
-          </figcaption>
-        </figure>
-          <!--/#3 Slide-->
-      </section>
-      <!--/Main slider-->
-      
-      <section>
-        <div>
-          <h2>О нас</h2>
-          <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-          <ul>
-              <li>Деловые линии</li>
-              <li>Автотрейдинг</li>
-              <li>ЖелДорЭкспедиция</li>
-            </ul>
-            <a href="">Подробнее о нас</a>
-        </div>
-        <div>
-            <h2>Контакты</h2>
-            <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Местонахождение офиса на карте">
-            <a href="">Напишите нам</a>
-        </div>
-      </section>
-    </main>
-    <footer>
-        <p>
-          <a>
-            <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'">
-          </a>
-        </p>
-        <ul>
-            <li>
-              <a href="">Войти</a>
-            </li>
-            <li>
-              <a href="">Сравнить</a>
-            </li>
-            <li>
-              <a href="">Корзина</a>
-            </li>
-          </ul>
-        <p>г. Москва, ул. Строителей, 15</p>
-        <ul>
-            <li>
-              <a href="">Доставка</a>
-            </li>
-            <li>
-              <a href="">Гарантия</a>
-            </li>
-            <li>
-              <a href="">Контакты</a>
-            </li>
-          </ul>
-          <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
-          <ul>
-              <li>
-                <a href="">Facebook</a>
-              </li>
-              <li>
-                <a href="">Instagram</a>
-              </li>
-              <li>
-                <a href="">Twitter</a>
-              </li>
-          </ul>
-          <p>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+<body>
+  <header>
+    <a>
+      <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
+    </a>
+    <form>
+      <input type="text" name="search" placeholder="Поиск по сайту">
+      <input type="submit" value="Поиск">
+    </form>
+    <ul>
+      <li>
+        <a href="">Войти</a>
+      </li>
+      <li>
+        <a href="">Сравнить</a>
+      </li>
+      <li>
+        <a href="">Корзина</a>
+      </li>
+    </ul>
+    <nav>
+      <ul>
+        <li>
+          <a href="catalog.html">Каталог</a>
+        </li>
+        <li>
+          <a href="">Доставка</a>
+        </li>
+        <li>
+          <a href="">Гарантия</a>
+        </li>
+        <li>
+          <a href="">Контакты</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1 class="visually-hidden">Device - интернет-магазин гаджетов с оригинальным дизайном</h1>
+    <!--main slider-->
+    <section>
+      <!--#1 slide-->
+      <figure>
+        <img src="https://via.placeholder.com/163x35" alt="Профессиональная селфи-палка">
+        <figcaption>
+          <h2>Делай селфи, как Бен Стиллер!</h2>
+          <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
+            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
           </p>
-    </footer>
-  </body>
+          <a href="">Подробнее</a>
+          <table>
+            <tr>
+              <td>Длинна палки</td>
+              <td>Вес палки</td>
+              <td>Материал</td>
+            </tr>
+            <tr>
+              <td>8,5 м</td>
+              <td>5 кг</td>
+              <td>Карбон</td>
+            </tr>
+          </table>
+        </figcaption>
+      </figure>
+      <!--/#1 slide-->
+
+      <!--#2 slide-->
+      <figure>
+        <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслет">
+        <figcaption>
+          <h2>Худеем правильно!</h2>
+          <p>
+            Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+          </p>
+          <a href="">Подробнее</a>
+          <table>
+            <tr>
+              <td>Без подзарядки</td>
+            </tr>
+            <tr>
+              <td>48 часов</td>
+            </tr>
+          </table>
+        </figcaption>
+      </figure>
+      <!--/#2 slide-->
+
+      <!--#3 slide-->
+      <figure>
+        <img src="https://via.placeholder.com/163x35" alt="Квадрокоптер">
+        <figcaption>
+          <h2>Порхает как бабочка, жалит как пчела!</h2>
+          <p>
+            Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+          </p>
+          <a href="">Подробнее</a>
+          <table>
+            <tr>
+              <td>Высота полета</td>
+              <td>Радиус поражения</td>
+            </tr>
+            <tr>
+              <td>800 м</td>
+              <td>50 м</td>
+            </tr>
+          </table>
+        </figcaption>
+      </figure>
+      <!--/#3 slide-->
+    </section>
+    <!--/main slider-->
+
+    <!--catalog sections-->
+    <section>
+      <ul>
+        <li>
+          <img src="https://via.placeholder.com/163x35" alt="Виртуальная реальность">
+          <a href="catalog.html">
+            <h3>Виртуальная реальность</h3>
+          </a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/163x35" alt="Моноподы для селфи">
+          <a href="catalog.html">
+            <h3>Моноподы для селфи</h3>
+          </a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/163x35" alt="Экшн камеры">
+          <a href="catalog.html">
+            <h3>Экшн камеры</h3>
+          </a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслеты">
+          <a href="catalog.html">
+            <h3>Фитнес-браслеты</h3>
+          </a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/163x35" alt="Умные часы">
+          <a href="catalog.html">
+            <h3>Умные часы</h3>
+          </a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/163x35" alt="Квадрокоптеры">
+          <a href="catalog.html">
+            <h3>Квадрокоптеры</h3>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <!--/catalog sections-->
+
+    <!--promo slider-->
+    <section>
+
+      <ul>
+        <li>
+          <a href=""><h3>Доставка</h3></a>
+        </li>
+        <li>
+          <a href=""><h3>Гарантия</h3></a>
+        </li>
+        <li>
+          <a href=""><h3>Кредит</h3></a>
+        </li>
+      </ul>
+
+      <dl>
+        <dt>
+          Доставка
+        </dt>
+        <dd>
+          <p>
+            Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
+            Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+          </p>
+          <img src="https://via.placeholder.com/136x164"
+            alt="Курьер, который оперативно доставляет товар интернет-магазина Device">
+        </dd>
+
+        <dt>
+          Гарантия
+        </dt>
+        <dd>
+          <p>
+            Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте,
+            мы выдадим вам новый. Товар, не дом, конечно же.
+          </p>
+          <img src="https://via.placeholder.com/136x164"
+            alt="Гаечный ключ и отвертка как символ квалифицированной поддержки товаров интернет-магазина Device">
+        </dd>
+
+        <dt>
+          Кредит
+        </dt>
+        <dd>
+          <p>
+            Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
+            условия кредита. Выгодные для нашего банка, разумеется.
+          </p>
+          <img src="https://via.placeholder.com/136x164"
+            alt="Человек, который несет холодильник в ломбард на своей спине, чтобы погасить платеж по кредиту за этот холодильник">
+        </dd>
+      </dl>
+    </section>
+    <!--/promo slider-->
+    <section>
+      <div>
+        <h2>О нас</h2>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
+          компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="">Подробнее о нас</a>
+      </div>
+      <div>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.
+          Всякое бывает.</p>
+        <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Местонахождение офиса на карте">
+        <a href="">Напишите нам</a>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>
+      <a>
+        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'">
+      </a>
+    </p>
+    <ul>
+      <li>
+        <a href="">Войти</a>
+      </li>
+      <li>
+        <a href="">Сравнить</a>
+      </li>
+      <li>
+        <a href="">Корзина</a>
+      </li>
+    </ul>
+    <p>г. Москва, ул. Строителей, 15</p>
+    <ul>
+      <li>
+        <a href="">Доставка</a>
+      </li>
+      <li>
+        <a href="">Гарантия</a>
+      </li>
+      <li>
+        <a href="">Контакты</a>
+      </li>
+    </ul>
+    <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
+    <ul>
+      <li>
+        <a href="">Facebook</a>
+      </li>
+      <li>
+        <a href="">Instagram</a>
+      </li>
+      <li>
+        <a href="">Twitter</a>
+      </li>
+    </ul>
+    <p>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+    </p>
+  </footer>
+</body>
+
 </html>
