Added brands section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,19 @@
       </dl>
     </section>
     <!--/promo slider-->
+
+    <!--brands section-->
+    <section>
+      <h3 class="visualy-hidden">Партнеры, с которыми мы работаем</h3>
+      <ul>
+        <li><img src="https://via.placeholder.com/260x100" alt="DJI"></li>
+        <li><img src="https://via.placeholder.com/260x100" alt="SP GADGETS"></li>
+        <li><img src="https://via.placeholder.com/260x100" alt="GoPro"></li>
+        <li><img src="https://via.placeholder.com/260x100" alt="VIVE"></li>
+      </ul>
+    </section>
+    <!--/brands section-->
+
     <section>
       <div>
         <h2>О нас</h2>
