Fixed validation errors

--- a/catalog.html
+++ b/catalog.html
@@ -42,28 +42,61 @@
       </nav>
     </header>
     <main>
-      <h1>Моноподы для селфи</h1>
-
-      <ul class="breadcrumb">
-        <li>
-          <a href="index.html">Главная</a>
-        </li>
-        <li>
-          <a href="">Каталог</a>
-        </li>
-        <li>
-          <a href="">Моноподы для селфи</a>
-        </li>
-      </ul>
-
+      <!--heading page section-->
       <section>
+          <h1>Моноподы для селфи</h1>
+          <ul class="breadcrumb">
+            <li>
+              <a href="index.html">Главная</a>
+            </li>
+            <li>
+              <a href="">Каталог</a>
+            </li>
+            <li>
+              <a href="">Моноподы для селфи</a>
+            </li>
+          </ul>
+      </section>
+      <!--/heading page section-->
+
+      <!--items filter-->
+      <!--/items filter-->
+
+      <!--items list-->
+      <section>
+        <h2 class="visually-hidden">Список товаров:</h2>
+        <header>
+          <span>Сортировка:</span>
+          <ul>
+            <li>
+              <a href="">По цене</a>
+            </li>
+            <li>
+              <a href="">По типу</a>
+            </li>
+            <li>
+              <a href="">По популярности</a>
+            </li>
+            <li>
+              <a href="">
+                <img src="https://via.placeholder.com/11x10" alt="По возрастанию">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="https://via.placeholder.com/11x10" alt="По убыванию">
+              </a>
+            </li>
+          </ul>
+        </header>
+        
         <ul>
           <li>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
             <a href="">
               <h3>Любительская селфи-палка</h3>
             </a>
-            <p>500 руб.</p>
+            <span>500 руб.</span>
             <div>
                 <a href="">В корзину</a>
                 <a href="">Добавить к сравнению</a>
@@ -75,7 +108,7 @@
             <a href="">
               <h3>Профессиональная селфи-палка</h3>
             </a>
-            <p>1 500 руб.</p>
+            <span>1 500 руб.</span>
             <div>
                 <a href="">В корзину</a>
                 <a href="">Добавить к сравнению</a>
@@ -87,7 +120,7 @@
             <a href="">
               <h3>Непотопляемая селфи-палка</h3>
             </a>
-            <p>2 500 руб.</p>
+            <span>2 500 руб.</span>
             <div>
                 <a href="">В корзину</a>
                 <a href="">Добавить к сравнению</a>
@@ -99,7 +132,7 @@
             <a href="">
               <h3>Селфи-палка «Следуй за мной»</h3>
             </a>
-            <p>4 900 руб.</p>
+            <span>4 900 руб.</span>
             <div>
                 <a href="">В корзину</a>
                 <a href="">Добавить к сравнению</a>
@@ -107,7 +140,8 @@
           </li>
         </ul>
       </section>
-
+      <!--/items list-->
+      </main>
       <footer>
         <p>
           <a>
