--- a/catalog.html
+++ b/catalog.html
@@ -141,51 +141,62 @@
         </ul>
       </section>
       <!--/items list-->
-      </main>
-      <footer>
-        <p>
-          <a>
-            <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'">
-          </a>
-        </p>
-        <ul>
-          <li>
-            <a href="profile.html">Валентин Петухов</a>
-          </li>
-          <li>
-            <a href="">Сравнить</a>
-          </li>
-          <li>
-            <a href="">Корзина</a>
-          </li>
-        </ul>
-        <p>г. Москва, ул. Строителей, 15</p>
-        <ul>
-          <li>
-            <a href="">Доставка</a>
-          </li>
-          <li>
-            <a href="">Гарантия</a>
-          </li>
-          <li>
-            <a href="">Контакты</a>
-          </li>
-        </ul>
-        <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
-        <ul>
-          <li>
-            <a href="">Facebook</a>
-          </li>
-          <li>
-            <a href="">Instagram</a>
-          </li>
-          <li>
-            <a href="">Twitter</a>
-          </li>
-        </ul>
-        <p>
-          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-        </p>
-      </footer>
+      <!--pagination-->
+      <section>
+        <a href="">Назад</a>
+          <ul>
+            <li><a>1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+          </ul>
+        <a href="">Вперед</a>
+      </section>
+      <!--/pagination-->
+    </main>
+    <footer>
+      <p>
+        <a>
+          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'">
+        </a>
+      </p>
+      <ul>
+        <li>
+          <a href="profile.html">Валентин Петухов</a>
+        </li>
+        <li>
+          <a href="">Сравнить</a>
+        </li>
+        <li>
+          <a href="">Корзина</a>
+        </li>
+      </ul>
+      <p>г. Москва, ул. Строителей, 15</p>
+      <ul>
+        <li>
+          <a href="">Доставка</a>
+        </li>
+        <li>
+          <a href="">Гарантия</a>
+        </li>
+        <li>
+          <a href="">Контакты</a>
+        </li>
+      </ul>
+      <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
+      <ul>
+        <li>
+          <a href="">Facebook</a>
+        </li>
+        <li>
+          <a href="">Instagram</a>
+        </li>
+        <li>
+          <a href="">Twitter</a>
+        </li>
+      </ul>
+      <p>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
+    </footer>
   </body>
 </html>
