--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
       <nav>
         <ul>
           <li>
-            <a href="catalog.html">Каталог</a>
+            <a>Каталог</a>
           </li>
           <li>
             <a href="">Доставка</a>
@@ -42,15 +42,15 @@
       </nav>
     </header>
     <main>
-      <!--heading page section-->
+      <!--heading page section--> 
       <section>
           <h1>Моноподы для селфи</h1>
           <ul class="breadcrumb">
-            <li>
+            <li> 
               <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="">Каталог</a>
+              <a>Каталог</a>
             </li>
             <li>
               <a href="">Моноподы для селфи</a>
@@ -88,26 +88,25 @@
               </a>
             </li>
           </ul>
-        </header>
-        
+        </header>     
         <ul>
           <li>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
-            <a href="">
-              <h3>Любительская селфи-палка</h3>
-            </a>
+            <h3>
+              <a href="">Любительская селфи-палка</a>
+            </h3>
             <span>500 руб.</span>
             <div>
-                <a href="">В корзину</a>
-                <a href="">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
             </div>
           </li>
 
           <li>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка">
-            <a href="">
-              <h3>Профессиональная селфи-палка</h3>
-            </a>
+            <h3>
+              <a href="">Профессиональная селфи-палка</a>
+            </h3>
             <span>1 500 руб.</span>
             <div>
                 <a href="">В корзину</a>
@@ -117,9 +116,9 @@
 
           <li>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
-            <a href="">
-              <h3>Непотопляемая селфи-палка</h3>
-            </a>
+            <h3>
+              <a href="">Непотопляемая селфи-палка</a>
+            </h3>
             <span>2 500 руб.</span>
             <div>
                 <a href="">В корзину</a>
@@ -129,9 +128,9 @@
 
           <li>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-            <a href="">
-              <h3>Селфи-палка «Следуй за мной»</h3>
-            </a>
+            <h3>
+              <a href="">Селфи-палка «Следуй за мной»</a>
+            </h3>
             <span>4 900 руб.</span>
             <div>
                 <a href="">В корзину</a>
@@ -142,15 +141,23 @@
       </section>
       <!--/items list-->
       <!--pagination-->
-      <section>
-        <a href="">Назад</a>
-          <ul>
-            <li><a>1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-          </ul>
-        <a href="">Вперед</a>
-      </section>
+      <ul>
+        <li>
+          <a href="">Назад</a>
+        </li>
+        <li>
+          <a>1</a>
+        </li>
+        <li>
+          <a href="">2</a>
+        </li>
+        <li>
+          <a href="">3</a>
+        </li>
+        <li>
+          <a href="">Вперед</a>
+        </li>
+      </ul>
       <!--/pagination-->
     </main>
     <footer>
