--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
       <!--main slider-->
       <section>
         <!--#1 slide-->
-        <figure>
-          <img src="https://via.placeholder.com/163x35" alt="Профессиональная селфи-палка">
-          <figcaption>
+        <div>
+          <p>
+            <img src="https://via.placeholder.com/163x35" alt="Профессиональная селфи-палка">
+          </p>
+          <div>
             <h2>Делай селфи, как Бен Стиллер!</h2>
             <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
@@ -67,14 +69,16 @@
                 <td>Карбон</td>
               </tr>
             </table>
-          </figcaption>
-        </figure>
+          </div>
+        </div>
         <!--/#1 slide-->
 
         <!--#2 slide-->
-        <figure>
-          <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслет">
-          <figcaption>
+        <div>
+          <p>
+            <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслет">
+          </p>
+          <div>
             <h2>Худеем правильно!</h2>
             <p>
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
@@ -88,14 +92,16 @@
                 <td>48 часов</td>
               </tr>
             </table>
-          </figcaption>
-        </figure>
+          </div>
+        </div>
         <!--/#2 slide-->
 
         <!--#3 slide-->
-        <figure>
-          <img src="https://via.placeholder.com/163x35" alt="Квадрокоптер">
-          <figcaption>
+        <div>
+          <p>
+            <img src="https://via.placeholder.com/163x35" alt="Квадрокоптер">
+          </p>
+          <div>
             <h2>Порхает как бабочка, жалит как пчела!</h2>
             <p>
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
@@ -111,8 +117,8 @@
                 <td>50 м</td>
               </tr>
             </table>
-          </figcaption>
-        </figure>
+          </div>
+        </div>
         <!--/#3 slide-->
       </section>
       <!--/main slider-->
@@ -122,111 +128,108 @@
         <ul>
           <li>
             <img src="https://via.placeholder.com/163x35" alt="Виртуальная реальность">
-            <a href="catalog.html">
-              <h3>Виртуальная реальность</h3>
-            </a>
+            <h3>
+              <a href="catalog.html">Виртуальная реальность</a>
+            </h3>
           </li>
           <li>
             <img src="https://via.placeholder.com/163x35" alt="Моноподы для селфи">
-            <a href="catalog.html">
-              <h3>Моноподы для селфи</h3>
-            </a>
+            <h3>
+              <a href="catalog.html">Моноподы для селфи</a>
+            </h3>
           </li>
           <li>
             <img src="https://via.placeholder.com/163x35" alt="Экшн камеры">
-            <a href="catalog.html">
-              <h3>Экшн камеры</h3>
-            </a>
+            <h3>
+              <a href="catalog.html">Экшн камеры</a>
+            </h3>
           </li>
           <li>
             <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслеты">
-            <a href="catalog.html">
-              <h3>Фитнес-браслеты</h3>
-            </a>
+            <h3>
+              <a href="catalog.html">Фитнес-браслеты</a>
+            </h3>
           </li>
           <li>
             <img src="https://via.placeholder.com/163x35" alt="Умные часы">
-            <a href="catalog.html">
-              <h3>Умные часы</h3>
-            </a>
+            <h3>
+              <a href="catalog.html">Умные часы</a>
+            </h3>
           </li>
           <li>
             <img src="https://via.placeholder.com/163x35" alt="Квадрокоптеры">
-            <a href="catalog.html">
-              <h3>Квадрокоптеры</h3>
-            </a>
+            <h3>
+              <a href="catalog.html">Квадрокоптеры</a>
+            </h3>
           </li>
         </ul>
       </section>
       <!--/catalog sections-->
-
       <!--promo slider-->
       <section>
-
         <ul>
           <li>
-            <a href=""><h3>Доставка</h3></a>
+            <button>Доставка</button>
+          </li>
+          <li>   
+            <button>Гарантия</button>
           </li>
           <li>
-            <a href=""><h3>Гарантия</h3></a>
-          </li>
-          <li>
-            <a href=""><h3>Кредит</h3></a>
+            <button>Кредит</button>
           </li>
         </ul>
-
-        <dl>
-          <dt>
-            Доставка
-          </dt>
-          <dd>
-            <p>
-              Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
-              Ведь мы неплохо заработаем, поднимая его на ваш этаж.
-            </p>
-            <img src="https://via.placeholder.com/136x164"
-              alt="Курьер, который оперативно доставляет товар интернет-магазина Device">
-          </dd>
-
-          <dt>
-            Гарантия
-          </dt>
-          <dd>
-            <p>
-              Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте,
-              мы выдадим вам новый. Товар, не дом, конечно же.
-            </p>
-            <img src="https://via.placeholder.com/136x164"
-              alt="Гаечный ключ и отвертка как символ квалифицированной поддержки товаров интернет-магазина Device">
-          </dd>
-
-          <dt>
-            Кредит
-          </dt>
-          <dd>
-            <p>
-              Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
-              условия кредита. Выгодные для нашего банка, разумеется.
-            </p>
-            <img src="https://via.placeholder.com/136x164"
-              alt="Человек, который несет холодильник в ломбард на своей спине, чтобы погасить платеж по кредиту за этот холодильник">
-          </dd>
-        </dl>
+        <div>
+          <h3>Доставка</h3>
+          <p>
+            Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
+            Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+          </p>
+          <img src="https://via.placeholder.com/136x164" alt="Курьер, который оперативно доставляет товар интернет-магазина Device">
+        </div>
+        <div>
+          <h3>Гарантия</h3>
+          <p>
+            Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте,
+            мы выдадим вам новый. Товар, не дом, конечно же.
+          </p>
+          <img src="https://via.placeholder.com/136x164" alt="Гаечный ключ и отвертка как символ квалифицированной поддержки товаров интернет-магазина Device">
+        </div>
+        <div>
+          <h3>Кредит</h3>
+          <p>
+            Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
+            условия кредита. Выгодные для нашего банка, разумеется.
+          </p>
+          <img src="https://via.placeholder.com/136x164" alt="Человек, который несет холодильник в ломбард на своей спине, чтобы погасить платеж по кредиту за этот холодильник">
+        </div>
       </section>
       <!--/promo slider-->
-
       <!--brands section-->
       <section>
         <h3 class="visualy-hidden">Партнеры, с которыми мы работаем</h3>
         <ul>
-          <li><img src="https://via.placeholder.com/260x100" alt="DJI"></li>
-          <li><img src="https://via.placeholder.com/260x100" alt="SP GADGETS"></li>
-          <li><img src="https://via.placeholder.com/260x100" alt="GoPro"></li>
-          <li><img src="https://via.placeholder.com/260x100" alt="VIVE"></li>
+          <li>
+            <a href="https://www.dji.com">
+              <img src="https://via.placeholder.com/260x100" alt="DJI"></a>
+          </li>
+          <li>
+            <a href="http://www.sp-gadgets.com">
+              <img src="https://via.placeholder.com/260x100" alt="SP GADGETS">
+            </a>
+          </li>
+          <li>
+            <a href="https://gopro.ru/">
+              <img src="https://via.placeholder.com/260x100" alt="GoPro">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.vive.com">
+              <img src="https://via.placeholder.com/260x100" alt="VIVE">
+            </a>
+          </li>
         </ul>
       </section>
       <!--/brands section-->
-
       <section>
         <div>
           <h2>О нас</h2>
