--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header>
-      <a>
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
+      <a href="index.html">
+        <img src="img/logo-device.svg" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
       </a>
       <form>
         <input type="text" name="search" placeholder="Поиск по сайту">
@@ -79,19 +79,19 @@
             </li>
             <li>
               <a href="">
-                <img src="https://via.placeholder.com/11x10" alt="По возрастанию">
+                <img src="img/icon-up-dir.svg" alt="По возрастанию">
               </a>
             </li>
             <li>
               <a href="">
-                <img src="https://via.placeholder.com/11x10" alt="По убыванию">
+                <img src="img/icon-down-dir.svg" alt="По убыванию">
               </a>
             </li>
           </ul>
         </header>     
         <ul>
           <li>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
+            <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             <h3>
               <a href="">Любительская селфи-палка</a>
             </h3>
@@ -103,38 +103,38 @@
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка">
+            <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             <h3>
               <a href="">Профессиональная селфи-палка</a>
             </h3>
             <span>1 500 руб.</span>
             <div>
-                <a href="">В корзину</a>
-                <a href="">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
             </div>
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
+            <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             <h3>
               <a href="">Непотопляемая селфи-палка</a>
             </h3>
             <span>2 500 руб.</span>
             <div>
-                <a href="">В корзину</a>
-                <a href="">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
             </div>
           </li>
 
           <li>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+            <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <h3>
               <a href="">Селфи-палка «Следуй за мной»</a>
             </h3>
             <span>4 900 руб.</span>
             <div>
-                <a href="">В корзину</a>
-                <a href="">Добавить к сравнению</a>
+              <a href="">В корзину</a>
+              <a href="">Добавить к сравнению</a>
             </div>
           </li>
         </ul>
@@ -161,8 +161,10 @@
       <!--/pagination-->
     </main>
     <footer>
-      <a>
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'">
+      <a href="index.html">
+        <svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35" fill="#ffc600">
+          <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z"/>
+        </svg>
       </a>
       <ul>
         <li>
