--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <a>
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
+        <img src="img/logo-device.svg" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
       </a>
       <form>
         <input type="text" name="search" placeholder="Поиск по сайту">
@@ -49,7 +49,7 @@
         <!--#1 slide-->
         <div>
           <p>
-            <img src="https://via.placeholder.com/163x35" alt="Профессиональная селфи-палка">
+            <img src="img/slider-1.png" alt="Профессиональная селфи-палка">
           </p>
           <div>
             <h2>Делай селфи, как Бен Стиллер!</h2>
@@ -72,11 +72,10 @@
           </div>
         </div>
         <!--/#1 slide-->
-
         <!--#2 slide-->
         <div>
           <p>
-            <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслет">
+            <img src="img/slider-2.png" alt="Фитнес-браслет">
           </p>
           <div>
             <h2>Худеем правильно!</h2>
@@ -95,11 +94,10 @@
           </div>
         </div>
         <!--/#2 slide-->
-
         <!--#3 slide-->
         <div>
           <p>
-            <img src="https://via.placeholder.com/163x35" alt="Квадрокоптер">
+            <img src="img/slider-3.png" alt="Квадрокоптер">
           </p>
           <div>
             <h2>Порхает как бабочка, жалит как пчела!</h2>
@@ -122,42 +120,41 @@
         <!--/#3 slide-->
       </section>
       <!--/main slider-->
-
       <!--catalog sections-->
       <section>
         <ul>
           <li>
-            <img src="https://via.placeholder.com/163x35" alt="Виртуальная реальность">
+            <img src="img/popular-1.svg" alt="Виртуальная реальность">
             <h3>
               <a href="catalog.html">Виртуальная реальность</a>
             </h3>
           </li>
           <li>
-            <img src="https://via.placeholder.com/163x35" alt="Моноподы для селфи">
+            <img src="img/popular-2.svg" alt="Моноподы для селфи">
             <h3>
               <a href="catalog.html">Моноподы для селфи</a>
             </h3>
           </li>
           <li>
-            <img src="https://via.placeholder.com/163x35" alt="Экшн камеры">
+            <img src="img/popular-3.svg" alt="Экшн камеры">
             <h3>
               <a href="catalog.html">Экшн камеры</a>
             </h3>
           </li>
           <li>
-            <img src="https://via.placeholder.com/163x35" alt="Фитнес-браслеты">
+            <img src="img/popular-4.svg" alt="Фитнес-браслеты">
             <h3>
               <a href="catalog.html">Фитнес-браслеты</a>
             </h3>
           </li>
           <li>
-            <img src="https://via.placeholder.com/163x35" alt="Умные часы">
+            <img src="img/popular-5.svg" alt="Умные часы">
             <h3>
               <a href="catalog.html">Умные часы</a>
             </h3>
           </li>
           <li>
-            <img src="https://via.placeholder.com/163x35" alt="Квадрокоптеры">
+            <img src="img/popular-6.svg" alt="Квадрокоптеры">
             <h3>
               <a href="catalog.html">Квадрокоптеры</a>
             </h3>
@@ -184,7 +181,7 @@
             Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
             Ведь мы неплохо заработаем, поднимая его на ваш этаж.
           </p>
-          <img src="https://via.placeholder.com/136x164" alt="Курьер, который оперативно доставляет товар интернет-магазина Device">
+          <img src="img/delivery.svg" alt="Курьер, который оперативно доставляет товар интернет-магазина Device">
         </div>
         <div>
           <h3>Гарантия</h3>
@@ -192,7 +189,7 @@
             Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте,
             мы выдадим вам новый. Товар, не дом, конечно же.
           </p>
-          <img src="https://via.placeholder.com/136x164" alt="Гаечный ключ и отвертка как символ квалифицированной поддержки товаров интернет-магазина Device">
+          <img src="img/warranty.svg" alt="Гаечный ключ и отвертка как символ квалифицированной поддержки товаров интернет-магазина Device">
         </div>
         <div>
           <h3>Кредит</h3>
@@ -200,7 +197,7 @@
             Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
             условия кредита. Выгодные для нашего банка, разумеется.
           </p>
-          <img src="https://via.placeholder.com/136x164" alt="Человек, который несет холодильник в ломбард на своей спине, чтобы погасить платеж по кредиту за этот холодильник">
+          <img src="img/credit.svg" alt="Человек, который несет холодильник в ломбард на своей спине, чтобы погасить платеж по кредиту за этот холодильник">
         </div>
       </section>
       <!--/promo slider-->
@@ -210,21 +207,22 @@
         <ul>
           <li>
             <a href="https://www.dji.com">
-              <img src="https://via.placeholder.com/260x100" alt="DJI"></a>
+              <img src="img/logo-1.jpg" alt="DJI">
+            </a>
           </li>
           <li>
             <a href="http://www.sp-gadgets.com">
-              <img src="https://via.placeholder.com/260x100" alt="SP GADGETS">
+              <img src="img/logo-2.jpg" alt="SP GADGETS">
             </a>
           </li>
           <li>
             <a href="https://gopro.ru/">
-              <img src="https://via.placeholder.com/260x100" alt="GoPro">
+              <img src="img/logo-3.jpg" alt="GoPro">
             </a>
           </li>
           <li>
             <a href="https://www.vive.com">
-              <img src="https://via.placeholder.com/260x100" alt="VIVE">
+              <img src="img/logo-4.jpg" alt="VIVE">
             </a>
           </li>
         </ul>
@@ -247,14 +245,18 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.
             Всякое бывает.</p>
-          <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Местонахождение офиса на карте">
+          <a href="https://goo.gl/maps/t1BHJGnUhaJkedXv9">
+            <img src="img/map.jpg" width="560" height="222" alt="Местонахождение офиса на карте">
+          </a>
           <a href="">Напишите нам</a>
         </div>
       </section>
     </main>
     <footer>
       <a>
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина 'Девайс'">
+        <svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35" fill="#ffc600">
+          <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z"/>
+        </svg>
       </a>
       <ul>
         <li>
