removed unnecessary img

--- a/catalog.html
+++ b/catalog.html
@@ -78,14 +78,10 @@
               <a href="">По популярности</a>
             </li>
             <li>
-              <a href="">
-                <img src="img/icon-up-dir.svg" alt="По возрастанию">
-              </a>
+              <a href=""></a>
             </li>
             <li>
-              <a href="">
-                <img src="img/icon-down-dir.svg" alt="По убыванию">
-              </a>
+              <a href=""></a>
             </li>
           </ul>
         </header>     
