--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <!--Бонусное задание продолжаем готовить графику-->
     <header>
       <a>
         <img src="img/logo-device.svg" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
