Revert "Additional task"
This reverts commit 01fa0c664b4a693f6413e2906c262d0068fc9f6e.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-
+    <!--Бонусное задание продолжаем готовить графику-->
     <header>
       <a>
         <img src="img/logo-device.svg" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
@@ -294,7 +294,6 @@
       <p>
         <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
       </p>
-      <span>Бонусное задание продолжаем готовить графику</span>
     </footer>
   </body>
 
