added form write-us

--- a/index.html
+++ b/index.html
@@ -247,6 +247,20 @@
             <img src="img/map.jpg" width="560" height="222" alt="Местонахождение офиса на карте">
           </a>
           <a href="">Напишите нам</a>
+          <form class="visualy-hidden" action="https://echo.htmlacademy.ru" method="POST">
+            <p>
+              <label for="popup-write-us-name">Имя:</label>
+              <input type="text" name="name" placeholder="Имя Фамилия" id="popup-write-us-name">
+            </p>
+            <p>
+              <label for="popup-write-us-email">Ваш e-mail:</label>
+              <input type="text" name="email" placeholder="email@example.com" id="popup-write-us-email">
+            </p>
+            <p>
+              <label for="popup-write-us-message">Текст письма:</label>
+              <textarea name="message" id="popup-write-us-message" cols="30" rows="10">В свободной</textarea>
+            </p>
+          </form>
         </div>
       </section>
     </main>
