fixed popup write-us

--- a/index.html
+++ b/index.html
@@ -258,8 +258,10 @@
             </p>
             <p>
               <label for="popup-write-us-message">Текст письма:</label>
-              <textarea name="message" id="popup-write-us-message" cols="30" rows="10">В свободной</textarea>
+              <textarea name="message" id="popup-write-us-message" cols="30" rows="10"
+                placeholder="В свободной форме"></textarea>
             </p>
+            <button type="submit">Отправить</button>
           </form>
         </div>
       </section>
