--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Бонусное задание продолжаем готовить графику-->
     <header>
       <a>
-        <img src="img/logo-device.svg" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
+        <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
       </a>
       <form>
         <input type="text" name="search" placeholder="Поиск по сайту">
@@ -244,8 +244,12 @@
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.
             Всякое бывает.</p>
           <a href="https://goo.gl/maps/t1BHJGnUhaJkedXv9">
-            <img src="img/map.jpg" width="560" height="222" alt="Местонахождение офиса на карте">
+            <img src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
           </a>
+          <p class="visualy-hidden">
+            <button aria-label="Закрыть"></button>
+            <img src="img/map-big.jpg" alt="г. Москва, ул. Строителей, 15">
+          </p>
           <a href="">Напишите нам</a>
           <form class="visualy-hidden" action="https://echo.htmlacademy.ru" method="POST">
             <p>
