removed  checkboxes property "checked"

--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,7 @@
           <legend>Цвет</legend>
           <ul>
             <li>
-              <input type="checkbox" name="filter-color" id="filter-color-black" value="black" checked>
+              <input type="checkbox" name="filter-color" id="filter-color-black" value="black">
               <label for="filter-color-black">Черный</label>
             </li>
             <li>
@@ -72,11 +72,11 @@
               <label for="filter-color-white">Белый</label>
             </li>
             <li>
-              <input type="checkbox" name="filter-color" id="filter-color-blue" value="blue" checked>
+              <input type="checkbox" name="filter-color" id="filter-color-blue" value="blue">
               <label for="filter-color-blue">Синий</label>
             </li>
             <li>
-              <input type="checkbox" name="filter-color" id="filter-color-red" value="red" checked>
+              <input type="checkbox" name="filter-color" id="filter-color-red" value="red" >
               <label for="filter-color-red">Красный</label>
             </li>
             <li>
