--- a/catalog.html
+++ b/catalog.html
@@ -90,7 +90,7 @@
           <ul>
             <li>
               <input type="radio" name="bluetooth" id="filter-bluetooth-yes" value="1">
-              <label for="filter-bluetooth">Есть</label>
+              <label for="filter-bluetooth-yes">Есть</label>
             </li>
             <li>
               <input type="radio" name="bluetooth" id="filter-bluetooth-no" value="0">
