added catalog list

--- a/catalog.html
+++ b/catalog.html
@@ -40,6 +40,26 @@
           </li>
         </ul>
       </nav>
+      <ul class="visually-hidden">
+        <li>
+          <a href="">Виртуальная реальность</a>
+        </li>
+        <li>
+          <a href="">Фитнес-браслеты</a>
+        </li>
+        <li>
+          <a href="">Квадрокоптеры</a>
+        </li>
+        <li>
+          <a href="">Моноподы для селфи</a>
+        </li>
+        <li>
+          <a href="">Умные часы</a>
+        </li>
+        <li>
+          <a href="">Экшн-камеры</a>
+        </li>
+      </ul>
     </header>
     <main>
       <!--heading page section--> 
