--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav>
         <ul>
           <li>
-            <a href="catalog.html">Каталог</a>
+            <a href="catalog.html">Каталог товаров</a>
           </li>
           <li>
             <a href="">Доставка</a>
@@ -42,6 +42,26 @@
           </li>
         </ul>
       </nav>
+      <ul class="visually-hidden">
+        <li>
+          <a href="">Виртуальная реальность</a>
+        </li>
+        <li>
+          <a href="">Фитнес-браслеты</a>
+        </li>
+        <li>
+          <a href="">Квадрокоптеры</a>
+        </li>
+        <li>
+          <a href="">Моноподы для селфи</a>
+        </li>
+        <li>
+          <a href="">Умные часы</a>
+        </li>
+        <li>
+          <a href="">Экшн-камеры</a>
+        </li>
+      </ul>
     </header>
     <main>
       <h1 class="visually-hidden">Device - интернет-магазин гаджетов с оригинальным дизайном</h1>
