--- a/catalog.html
+++ b/catalog.html
@@ -28,6 +28,26 @@
         <ul>
           <li>
             <a>Каталог</a>
+            <ul>
+              <li>
+                <a href="">Виртуальная реальность</a>
+              </li>
+              <li>
+                <a href="">Фитнес-браслеты</a>
+              </li>
+              <li>
+                <a href="">Квадрокоптеры</a>
+              </li>
+              <li>
+                <a href="">Моноподы для селфи</a>
+              </li>
+              <li>
+                <a href="">Умные часы</a>
+              </li>
+              <li>
+                <a href="">Экшн-камеры</a>
+              </li>
+            </ul>
           </li>
           <li>
             <a href="">Доставка</a>
@@ -40,26 +60,6 @@
           </li>
         </ul>
       </nav>
-      <ul class="visually-hidden">
-        <li>
-          <a href="">Виртуальная реальность</a>
-        </li>
-        <li>
-          <a href="">Фитнес-браслеты</a>
-        </li>
-        <li>
-          <a href="">Квадрокоптеры</a>
-        </li>
-        <li>
-          <a href="">Моноподы для селфи</a>
-        </li>
-        <li>
-          <a href="">Умные часы</a>
-        </li>
-        <li>
-          <a href="">Экшн-камеры</a>
-        </li>
-      </ul>
     </header>
     <main>
       <!--heading page section--> 
@@ -79,47 +79,49 @@
       </section>
       <!--/heading page section-->
       <!--items filter-->
-      <form action="https://echo.htmlacademy.ru" method="GET">
-        <fieldset>
-          <legend>Цвет</legend>
-          <ul>
-            <li>
-              <input type="checkbox" name="filter-color" id="filter-color-black" value="black">
-              <label for="filter-color-black">Черный</label>
-            </li>
-            <li>
-              <input type="checkbox" name="filter-color" id="filter-color-white" value="white">
-              <label for="filter-color-white">Белый</label>
-            </li>
-            <li>
-              <input type="checkbox" name="filter-color" id="filter-color-blue" value="blue">
-              <label for="filter-color-blue">Синий</label>
-            </li>
-            <li>
-              <input type="checkbox" name="filter-color" id="filter-color-red" value="red" >
-              <label for="filter-color-red">Красный</label>
-            </li>
-            <li>
-              <input type="checkbox" name="filter-color" id="filter-color-pink" value="pink">
-              <label for="filter-color-pink">Розовый</label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset>
-          <legend>Bluetooth</legend>
-          <ul>
-            <li>
-              <input type="radio" name="bluetooth" id="filter-bluetooth-yes" value="1">
-              <label for="filter-bluetooth-yes">Есть</label>
-            </li>
-            <li>
-              <input type="radio" name="bluetooth" id="filter-bluetooth-no" value="0">
-              <label for="filter-bluetooth-no">Нет</label>
-            </li>
-          </ul>
-        </fieldset>
-        <button type="submit">Показать</button>
-      </form>
+      <div>
+        <form action="https://echo.htmlacademy.ru" method="GET">
+          <fieldset>
+            <legend>Цвет</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="filter-color" id="filter-color-black" value="black">
+                <label for="filter-color-black">Черный</label>
+              </li>
+              <li>
+                <input type="checkbox" name="filter-color" id="filter-color-white" value="white">
+                <label for="filter-color-white">Белый</label>
+              </li>
+              <li>
+                <input type="checkbox" name="filter-color" id="filter-color-blue" value="blue">
+                <label for="filter-color-blue">Синий</label>
+              </li>
+              <li>
+                <input type="checkbox" name="filter-color" id="filter-color-red" value="red">
+                <label for="filter-color-red">Красный</label>
+              </li>
+              <li>
+                <input type="checkbox" name="filter-color" id="filter-color-pink" value="pink">
+                <label for="filter-color-pink">Розовый</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Bluetooth</legend>
+            <ul>
+              <li>
+                <input type="radio" name="bluetooth" id="filter-bluetooth-yes" value="yes">
+                <label for="filter-bluetooth-yes">Есть</label>
+              </li>
+              <li>
+                <input type="radio" name="bluetooth" id="filter-bluetooth-no" value="no">
+                <label for="filter-bluetooth-no">Нет</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="submit">Показать</button>
+        </form>
+      </div>
       <!--/items filter-->
       <!--items list-->
       <section>
