--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
       </a>
       <form action="https://echo.htmlacademy.ru" method="GET">
-        <input type="text" name="search" placeholder="Поиск по сайту">
-        <input type="submit" value="Найти">
+        <input type="search" name="search" placeholder="Поиск по сайту">
+        <button type="submit">Найти</button>
       </form>
       <ul>
         <li>
@@ -27,24 +27,24 @@
       <nav>
         <ul>
           <li aria-haspopup="true">
-            <a role="menu" tabindex="0" aria-label="Каталог товаров">Каталог товаров</a>
+            <a href="catalog.html">Каталог товаров</a>
             <ul>
-              <li tabindex="-1">
+              <li>
                 <a href="">Виртуальная реальность</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Фитнес-браслеты</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Квадрокоптеры</a>
               </li>
-              <li tabindex="-1">
-                <a href=""> Моноподы для селфи</a>
+              <li>
+                <a href="">Моноподы для селфи</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Умные часы</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Экшн-камеры</a>
               </li>
             </ul>
@@ -72,7 +72,6 @@
             <img src="img/slider-1.png" alt="Профессиональная селфи-палка">
           </p>
           <div>
-            <span class="visually-hidden">Слайд 1</span>
             <h3>Делай селфи, как Бен Стиллер!</h3>
             <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
@@ -95,7 +94,6 @@
         <!--/#1 slide-->
         <!--#2 slide-->
         <div>
-          <span class="visually-hidden">Слайд 2</span>
           <p>
             <img src="img/slider-2.png" alt="Фитнес-браслет">
           </p>
@@ -118,7 +116,6 @@
         <!--/#2 slide-->
         <!--#3 slide-->
         <div>
-          <span class="visually-hidden">Слайд 3</span>
           <p>
             <img src="img/slider-3.png" alt="Квадрокоптер">
           </p>
