--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,8 @@
         <img src="img/logo-device.svg" width="163" height="35" alt="Логотип интернет-магазина 'Device'">
       </a>
       <form action="https://echo.htmlacademy.ru" method="GET">
-        <input type="text" name="search" placeholder="Поиск по сайту">
-        <input type="submit" value="Найти">
+        <input type="search" name="search" placeholder="Поиск по сайту">
+        <button type="submit">Найти</button>
       </form>
       <ul>
         <li>
@@ -27,27 +27,24 @@
       <nav>
         <ul>
           <li aria-haspopup="true">
-            <a role="menu" tabindex="0" aria-label="Каталог товаров">Каталог товаров</a>
+            <a>Каталог товаров</a>
             <ul>
-              <li tabindex="-1">
+              <li>
                 <a href="">Виртуальная реальность</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Фитнес-браслеты</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Квадрокоптеры</a>
               </li>
-              <li tabindex="-1">
-                <a aria-current="page">
-                  <span class="visually-hidden">Текущий пункт:</span>
-                  Моноподы для селфи
-                </a>
+              <li>
+                <a href="">Моноподы для селфи</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Умные часы</a>
               </li>
-              <li tabindex="-1">
+              <li>
                 <a href="">Экшн-камеры</a>
               </li>
             </ul>
@@ -258,13 +255,13 @@
       <a href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
       <ul>
         <li>
-          <a aria-label="Device в группе в Facebook" href=""><img src="img/fb.svg" width="32" height="32" alt=""></a>
+          <a href="">Facebook</a>
         </li>
         <li>
-          <a aria-label="Device в группе в Instagram" href=""><img src="img/instagram.svg" width="32" height="32" alt=""></a>
+          <a href="">Instagram</a>
         </li>
         <li>
-          <a aria-label="Device в группе в Twitter" href=""><img src="img/twitter.svg" width="32" height="32" alt=""></a>
+          <a href="">Twitter</a>
         </li>
       </ul>
       <p>
